add : hand function